third_party/move/move-compiler-v2/tests/more-v1/parser/global_access_pack.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/global_access_pack.move:3:9
  │
3 │         ::S { }
  │         ^^
  │         │
  │         Unexpected '::'
  │         Expected an expression term
